LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_chroma_bits_per_pixel(const struct heif_image_handle *)
     * }
     */
    public static MethodHandle heif_image_handle_get_chroma_bits_per_pixel$handle() {
        return heif_image_handle_get_chroma_bits_per_pixel.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_chroma_bits_per_pixel(const struct heif_image_handle *)
     * }
     */
    public static int heif_image_handle_get_chroma_bits_per_pixel(MemorySegment x0) {
        var mh$ = heif_image_handle_get_chroma_bits_per_pixel.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_chroma_bits_per_pixel", x0);
            }
            return (int)mh$.invokeExact(x0);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_ispe_width {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_ispe_width"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_ispe_width(const struct heif_image_handle *handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_ispe_width$descriptor() {
        return heif_image_handle_get_ispe_width.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_ispe_width(const struct heif_image_handle *handle)
     * }
     */
    public static MethodHandle heif_image_handle_get_ispe_width$handle() {
        return heif_image_handle_get_ispe_width.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_ispe_width(const struct heif_image_handle *handle)
     * }
     */
    public static int heif_image_handle_get_ispe_width(MemorySegment handle) {
        var mh$ = heif_image_handle_get_ispe_width.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_ispe_width", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_ispe_height {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_ispe_height"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_ispe_height(const struct heif_image_handle *handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_ispe_height$descriptor() {
        return heif_image_handle_get_ispe_height.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_ispe_height(const struct heif_image_handle *handle)
     * }
     */
    public static MethodHandle heif_image_handle_get_ispe_height$handle() {
        return heif_image_handle_get_ispe_height.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_ispe_height(const struct heif_image_handle *handle)
     * }
     */
    public static int heif_image_handle_get_ispe_height(MemorySegment handle) {
        var mh$ = heif_image_handle_get_ispe_height.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_ispe_height", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_has_depth_image {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_has_depth_image"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_has_depth_image(const struct heif_image_handle *)
     * }
     */
    public static FunctionDescriptor heif_image_handle_has_depth_image$descriptor() {
        return heif_image_handle_has_depth_image.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_has_depth_image(const struct heif_image_handle *)
     * }
     */
    public static MethodHandle heif_image_handle_has_depth_image$handle() {
        return heif_image_handle_has_depth_image.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_has_depth_image(const struct heif_image_handle *)
     * }
     */
    public static int heif_image_handle_has_depth_image(MemorySegment x0) {
        var mh$ = heif_image_handle_has_depth_image.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_has_depth_image", x0);
            }
            return (int)mh$.invokeExact(x0);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_number_of_depth_images {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_number_of_depth_images"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_number_of_depth_images(const struct heif_image_handle *handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_number_of_depth_images$descriptor() {
        return heif_image_handle_get_number_of_depth_images.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_number_of_depth_images(const struct heif_image_handle *handle)
     * }
     */
    public static MethodHandle heif_image_handle_get_number_of_depth_images$handle() {
        return heif_image_handle_get_number_of_depth_images.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_number_of_depth_images(const struct heif_image_handle *handle)
     * }
     */
    public static int heif_image_handle_get_number_of_depth_images(MemorySegment handle) {
        var mh$ = heif_image_handle_get_number_of_depth_images.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_number_of_depth_images", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_list_of_depth_image_IDs {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_list_of_depth_image_IDs"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_list_of_depth_image_IDs(const struct heif_image_handle *handle, heif_item_id *ids, int count)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_list_of_depth_image_IDs$descriptor() {
        return heif_image_handle_get_list_of_depth_image_IDs.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_list_of_depth_image_IDs(const struct heif_image_handle *handle, heif_item_id *ids, int count)
     * }
     */
    public static MethodHandle heif_image_handle_get_list_of_depth_image_IDs$handle() {
        return heif_image_handle_get_list_of_depth_image_IDs.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_list_of_depth_image_IDs(const struct heif_image_handle *handle, heif_item_id *ids, int count)
     * }
     */
    public static int heif_image_handle_get_list_of_depth_image_IDs(MemorySegment handle, MemorySegment ids, int count) {
        var mh$ = heif_image_handle_get_list_of_depth_image_IDs.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_list_of_depth_image_IDs", handle, ids, count);
            }
            return (int)mh$.invokeExact(handle, ids, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_depth_image_handle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_depth_image_handle"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_image_handle_get_depth_image_handle(const struct heif_image_handle *handle, heif_item_id depth_image_id, struct heif_image_handle **out_depth_handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_depth_image_handle$descriptor() {
        return heif_image_handle_get_depth_image_handle.DESC;
    }
